Blender 2.79 crash on object duplication via menu #52414

Closed
opened 2017-08-16 08:05:20 +02:00 by Ilja Razinkov · 6 comments

System Information
Windows 10

Blender Version
Broken: 2.79 535e836

Short description of error
Blender crashes on attempt to duplicate object

Exact steps for others to reproduce the error
Open attached file, problematic object (named "object2crash") already selected. Go to "Object" menu and select "Duplicate Objects". Blender crashes immediately.

Shift-D works as usual, at first glance, but if you move mouse for awhile (moving newly duplicated object) Blender will crash too, soon.

Note: Blend is not "minimal example", sorry, can`t reproduce crash on simple geometry... object2crash has 3 modifiers on it, maybe this is wicked, but they all needed

crashOnObjectDuplication.zip

**System Information** Windows 10 **Blender Version** Broken: 2.79 535e836 **Short description of error** Blender crashes on attempt to duplicate object **Exact steps for others to reproduce the error** Open attached file, problematic object (named "object2crash") already selected. Go to "Object" menu and select "Duplicate Objects". Blender crashes immediately. Shift-D works as usual, at first glance, but if you move mouse for awhile (moving newly duplicated object) Blender will crash too, soon. Note: Blend is not "minimal example", sorry, can`t reproduce crash on simple geometry... object2crash has 3 modifiers on it, maybe this is wicked, but they all needed [crashOnObjectDuplication.zip](https://archive.blender.org/developer/F714008/crashOnObjectDuplication.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @IPv6

Added subscriber: @IPv6

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-08-16 10:48:44 +02:00

Confirmed, caused by own changes in snap code (crash happens due to snapping, not object duplication itself).

Confirmed, caused by own changes in snap code (crash happens due to snapping, not object duplication itself).

This issue was referenced by 1f3724f7f4

This issue was referenced by 1f3724f7f4f62a3c7829547d523fbc6686acf8b8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52414
No description provided.